--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
+    "@vercel/analytics": "^1.5.0",
     "better-analytics": "^0.10.0",
     "clsx": "^2.1.1",
     "next": "15.2.4",
